--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,14 @@
     <string name="nav_header_title">Kyle Dunne</string>
     <string name="nav_header_subtitle">kyledunne.me</string>
     <string name="nav_header_image">Fruit Dragon image</string>
-    <string name="action_settings">Settings</string>
 
-    <string name="menu_music">Music</string>
-    <string name="menu_golf">Golf</string>
-
+    <string name="music">Music</string>
+    <string name="golf">Golf</string>
     <string name="album_artwork">Album Artwork</string>
-
     <string name="about_body_text">This is my personal app for reviewing things. The main reason I
         created it is to improve my Android development skills, although I also do intend to put
         these reviews up on my personal website when I get that up and running in the future.
     </string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
 </resources>
